force-app/main/default/objects/Booking__c/fields/Last_Call_Description__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Description__c</fullName>
    <label>Last Action Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>