force-app/main/default/objects/Booking__c/fields/Late_Payment_Charges_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Late_Payment_Charges_Roll_Up__c</fullName>
    <label>Late Payment Charges (Roll Up)</label>
    <summarizedField>Demand__c.Total_Amount_with_Tax_Demanded__c</summarizedField>
    <summaryFilterItems>
        <field>Demand__c.Demand_Types__c</field>
        <operation>equals</operation>
        <value>Consider</value>
    </summaryFilterItems>
    <summaryForeignKey>Demand__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>