force-app/main/default/objects/Booking__c/fields/Maintenance_charge__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_charge__c</fullName>
    <label>Maintenance charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>