force-app/main/default/objects/Booking__c/fields/Marketing_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Incentive__c</fullName>
    <label>Marketing Incentive</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>