force-app/main/default/objects/Booking__c/fields/Material_spec_2__c.field-meta.xml
<CustomField>
    <fullName>Material_spec_2__c</fullName>
    <label>Material spec 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>