force-app/main/default/objects/Booking__c/fields/Milestone_Due_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Due_Till_Date__c</fullName>
    <label>Milestone Due Till Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>