force-app/main/default/objects/Booking__c/fields/MVAT_Booking__c.field-meta.xml
<CustomField>
    <fullName>MVAT_Booking__c</fullName>
    <label>MVAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>