force-app/main/default/objects/Booking__c/fields/Nationality_2__c.field-meta.xml
<CustomField>
    <fullName>Nationality_2__c</fullName>
    <label>Nationality 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>