force-app/main/default/objects/Booking__c/fields/Nationality_V2__c.field-meta.xml
<CustomField>
    <fullName>Nationality_V2__c</fullName>
    <formula>TEXT(Applicant_Details__r.Nationality__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nationality</label>
    <type>Text</type>
</CustomField>