force-app/main/default/objects/Booking__c/fields/No_of_Earmarked_Parking__c.field-meta.xml
<CustomField>
    <fullName>No_of_Earmarked_Parking__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of Earmarked Parking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>