force-app/main/default/objects/Booking__c/fields/NPS_status__c.field-meta.xml
<CustomField>
    <fullName>NPS_status__c</fullName>
    <label>NPS status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>