force-app/main/default/objects/Booking__c/fields/NPS_Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>NPS_Survey_Status__c</fullName>
    <label>NPS Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Completed</fullName>
            </value>
            <value>
                <fullName>Did Not Pick</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Wrong Number / Non-Contactable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>