force-app/main/default/objects/Booking__c/fields/Offer_2__c.field-meta.xml
<CustomField>
    <fullName>Offer_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2 year service charge waiver</label>
    <type>Checkbox</type>
</CustomField>