force-app/main/default/objects/Booking__c/fields/Opp_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_ID__c</fullName>
    <formula>Opportunity__r.Opportunity_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID</label>
    <type>Text</type>
</CustomField>