force-app/main/default/objects/Booking__c/fields/Other_Charge__c.field-meta.xml
<CustomField>
    <fullName>Other_Charge__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Other Charges (AED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>