force-app/main/default/objects/Booking__c/fields/PA_DOB__c.field-meta.xml
<CustomField>
    <fullName>PA_DOB__c</fullName>
    <label>PA DOB</label>
    <type>Date</type>
</CustomField>