force-app/main/default/objects/Booking__c/fields/Paid_Amount_For_Process__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount_For_Process__c</fullName>
    <formula>Total_On_Account_Money__c - Registration_Amount_Paid__c - Credit_Card_Charges_Colleceted__c -VAT_Reduction_From_PPP__c - Late_Payment_Charges_Roll_Up__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Amount For Process</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>