force-app/main/default/objects/Booking__c/fields/Paid_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Paid_Percentage__c</fullName>
    <formula>If(Agreement_Value__c &gt; 0 &amp;&amp; Total_On_Account_Money__c &gt; 0,
(Total_On_Account_Money_With_Registration__c)/(Agreement_Value__c + Tax_on_Purchase_Price__c),
0)</formula>
    <label>Paid Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>