force-app/main/default/objects/Booking__c/fields/Paid_Percentage_Token_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Percentage_Token_Amount__c</fullName>
    <formula>If(Total_On_Account_Money_With_Registration__c&lt;= (Token_Amount__c + ST_Token_Amount__c),
(Total_On_Account_Money_With_Registration__c - Registration_Amount_Paid__c)/(Token_Amount__c + ST_Token_Amount__c),
1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Percentage Token Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>