force-app/main/default/objects/Booking__c/fields/PCC_Approved_By_Audit__c.field-meta.xml
<CustomField>
    <fullName>PCC_Approved_By_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCC Approved By Audit</label>
    <type>Checkbox</type>
</CustomField>