force-app/main/default/objects/Booking__c/fields/PCC_Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>PCC_Rejection_Comments__c</fullName>
    <label>PCC Rejection Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>