force-app/main/default/objects/Booking__c/fields/PCC_Status__c.field-meta.xml
<CustomField>
    <fullName>PCC_Status__c</fullName>
    <label>PCC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending for Accounts Approval</fullName>
            </value>
            <value>
                <fullName>Pending for Audit Approval</fullName>
            </value>
            <value>
                <fullName>Rejected by Accounts</fullName>
            </value>
            <value>
                <fullName>Approved by Audit</fullName>
            </value>
            <value>
                <fullName>Rejected by Audit Submitted to Accounts</fullName>
            </value>
            <value>
                <fullName>Rejected by Audit &amp; Submitted to Collections and CRM</fullName>
            </value>
            <value>
                <fullName>Rejected by Audit &amp; Submitted to Accounts and CRM</fullName>
            </value>
            <value>
                <fullName>Rejected by Audit</fullName>
            </value>
            <value>
                <fullName>Re-Submitted to Accounts</fullName>
            </value>
            <value>
                <fullName>Re-Submitted to Audit</fullName>
            </value>
            <value>
                <fullName>Re-Submitted to Collections</fullName>
            </value>
            <value>
                <fullName>Rejected by Collection</fullName>
                <isActive>false</isActive>
                <label>Rejected by Collection</label>
            </value>
            <value>
                <fullName>Submitted to Accounts</fullName>
                <isActive>false</isActive>
                <label>Submitted to Accounts</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>