force-app/main/default/objects/Booking__c/fields/Post_Dated_Cheques__c.field-meta.xml
<CustomField>
    <fullName>Post_Dated_Cheques__c</fullName>
    <label>Post Dated Cheques</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>