force-app/main/default/objects/Booking__c/fields/Pre_registration__c.field-meta.xml
<CustomField>
    <fullName>Pre_registration__c</fullName>
    <label>Pre-registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Initiated</fullName>
                <default>true</default>
                <label>Not Initiated</label>
            </value>
            <value>
                <fullName>Request to Initiate Pre-Registration</fullName>
            </value>
            <value>
                <fullName>Additional Docs required</fullName>
            </value>
            <value>
                <fullName>Customer Docs Required</fullName>
            </value>
            <value>
                <fullName>Under Process - Paid</fullName>
            </value>
            <value>
                <fullName>Submitted To DLD</fullName>
            </value>
            <value>
                <fullName>With Audit</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>