force-app/main/default/objects/Booking__c/fields/Presales_Agent__c.field-meta.xml
<CustomField>
    <fullName>Presales_Agent__c</fullName>
    <formula>Opportunity__r.Presales_Agent__r.FirstName+&quot; &quot;
+Opportunity__r.Presales_Agent__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presales Agent</label>
    <type>Text</type>
</CustomField>