force-app/main/default/objects/Booking__c/fields/Previous_Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Previous_Sales_Head__c</fullName>
    <label>Previous Sales Head</label>
    <length>100</length>
    <type>Text</type>
</CustomField>