force-app/main/default/objects/Booking__c/fields/Previous_Sales_Managers__c.field-meta.xml
<CustomField>
    <fullName>Previous_Sales_Managers__c</fullName>
    <label>Previous Sales Managers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>