force-app/main/default/objects/Booking__c/fields/Previous_Secondary_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Previous_Secondary_Sales_Manager__c</fullName>
    <label>Previous Secondary Sales Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>