force-app/main/default/objects/Booking__c/fields/Previous_Sobha_Connect__c.field-meta.xml
<CustomField>
    <fullName>Previous_Sobha_Connect__c</fullName>
    <label>Previous Sobha Connect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>