force-app/main/default/objects/Booking__c/fields/Primary_Applicant_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant_Address__c</fullName>
    <label>Primary Applicant Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>