force-app/main/default/objects/Booking__c/fields/Primary_Applicant_Address_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant_Address_Arabic__c</fullName>
    <label>Primary Applicant Address Arabic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>