force-app/main/default/objects/Booking__c/fields/Primary_Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant_Email__c</fullName>
    <label>Primary Applicant Email</label>
    <type>Email</type>
</CustomField>