force-app/main/default/objects/Booking__c/fields/Primary_Mobile_Number3__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mobile_Number3__c</fullName>
    <label>Primary Mobile Number3</label>
    <type>Phone</type>
</CustomField>