force-app/main/default/objects/Booking__c/fields/PrimaryMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>PrimaryMobileNumber__c</fullName>
    <label>Primary Mobile Number</label>
    <type>Phone</type>
</CustomField>