force-app/main/default/objects/Booking__c/fields/PSF_Rate__c.field-meta.xml
<CustomField>
    <fullName>PSF_Rate__c</fullName>
    <formula>Quotation__r.Rate_Per_SFT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSF Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>