force-app/main/default/objects/Booking__c/fields/Purchase_Price_Only__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_Only__c</fullName>
    <label>Purchase Price Only</label>
    <type>TextArea</type>
</CustomField>