force-app/main/default/objects/Booking__c/fields/Qualification_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Date__c</fullName>
    <label>Qualification Date</label>
    <type>Date</type>
</CustomField>