force-app/main/default/objects/Booking__c/fields/Qualification_Status__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Status__c</fullName>
    <formula>If(ISPICKVAL(Booking_Approver_Audit__c , &apos;Accepted&apos;) &amp;&amp;  NOT( ISNULL(Audit_Approval_Date__c)),&apos;Qualified&apos;,&apos;Not Qualified&apos;)</formula>
    <label>Qualification Status</label>
    <type>Text</type>
</CustomField>