force-app/main/default/objects/Booking__c/fields/ratePerSqvalue__c.field-meta.xml
<CustomField>
    <fullName>ratePerSqvalue__c</fullName>
    <formula>Quotation__r.Total_Agreement_Value_Bucket__c  /  Unit__r.Chargeable_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RatePerSqvalue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>