force-app/main/default/objects/Booking__c/fields/Reason_For_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Cancellation__c</fullName>
    <label>Cancellation Remarks</label>
    <type>TextArea</type>
</CustomField>