force-app/main/default/objects/Booking__c/fields/Reason_For_Cancellation_D__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Cancellation_D__c</fullName>
    <label>Reason For Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15 days - 0%</fullName>
            </value>
            <value>
                <fullName>30 days - unit not qualified</fullName>
            </value>
            <value>
                <fullName>Auto cancellation (7 days policy)</fullName>
            </value>
            <value>
                <fullName>Cancel &amp; Rebook</fullName>
            </value>
            <value>
                <fullName>Cancel &amp; Swap</fullName>
            </value>
            <value>
                <fullName>Cancellation &amp; Transfer</fullName>
            </value>
            <value>
                <fullName>Cancelled by CRM</fullName>
            </value>
            <value>
                <fullName>Client request for cancellation</fullName>
            </value>
            <value>
                <fullName>Low Funds</fullName>
            </value>
            <value>
                <fullName>Management Instruction</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>PR rejected due to non-submission of NSA</fullName>
            </value>
            <value>
                <fullName>Auto cancellation (14 days policy)</fullName>
            </value>
            <value>
                <fullName>15 days - 2%</fullName>
            </value>
            <value>
                <fullName>14Days - Not Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>