force-app/main/default/objects/Booking__c/fields/Receipts__c.field-meta.xml
<CustomField>
    <fullName>Receipts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Receipt__c.Project_Unit__c</field>
            <operation>equals</operation>
            <valueField>$Source.Unit__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>