force-app/main/default/objects/Booking__c/fields/Registration_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Registration_Amount_Paid__c</fullName>
    <label>Registration Amount Paid (RollUp)</label>
    <summarizedField>Receipt__c.Registration_Collection_Control_Report__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt__c.Receipt_Status__c</field>
        <operation>equals</operation>
        <value>Cleared</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Receipt__c.Is_Reversed_Receipt__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Receipt__c.Other_Charges_Type__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>