force-app/main/default/objects/Booking__c/fields/Registration_Amount_Paid_yes__c.field-meta.xml
<CustomField>
    <fullName>Registration_Amount_Paid_yes__c</fullName>
    <formula>Registration_Amount_Paid__c/Total_DLD_Amt_Demanded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>