force-app/main/default/objects/Booking__c/fields/Registration_Follow_Up_Created__c.field-meta.xml
<CustomField>
    <fullName>Registration_Follow_Up_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Follow Up Created</label>
    <type>Checkbox</type>
</CustomField>