force-app/main/default/objects/Booking__c/fields/Rejection_Ression_for__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Ression_for__c</fullName>
    <label>Rejection Reason for PCC by Audit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Collection&amp;CRM</fullName>
                <label>Collection &amp; CRM</label>
            </value>
            <value>
                <fullName>Account and CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>