force-app/main/default/objects/Booking__c/fields/Remainder_Notice__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remainder Notice</label>
    <type>Checkbox</type>
</CustomField>