force-app/main/default/objects/Booking__c/fields/Reminder_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent_Date__c</fullName>
    <label>Reminder Sent Date</label>
    <type>Date</type>
</CustomField>