force-app/main/default/objects/Booking__c/fields/ReSale_Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>ReSale_Transfer_Type__c</fullName>
    <label>ReSale Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>PMT</fullName>
            </value>
            <value>
                <fullName>SMT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>