force-app/main/default/objects/Booking__c/fields/Reverse_Demand__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reverse Demand</label>
    <type>Checkbox</type>
</CustomField>