force-app/main/default/objects/Booking__c/fields/Saleable_Area__c.field-meta.xml
<CustomField>
    <fullName>Saleable_Area__c</fullName>
    <formula>Unit__r.Chargeable_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saleable Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>