force-app/main/default/objects/Booking__c/fields/Sales_Head_Incenticve__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head_Incenticve__c</fullName>
    <formula>Incentive_Amount__c * 0.25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Head Incenticve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>