force-app/main/default/objects/Booking__c/fields/Sales_Managers__c.field-meta.xml
<CustomField>
    <fullName>Sales_Managers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>