force-app/main/default/objects/Booking__c/fields/Sales_Operations__c.field-meta.xml
<CustomField>
    <fullName>Sales_Operations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Operations</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Booking (Sales Operations)</relationshipLabel>
    <relationshipName>Booking6</relationshipName>
    <type>Lookup</type>
</CustomField>