force-app/main/default/objects/Booking__c/fields/Sales_Team_Change_Comment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Change_Comment__c</fullName>
    <label>Sales Team Change Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>