force-app/main/default/objects/Booking__c/fields/Sales_Team_Change_UserName__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Change_UserName__c</fullName>
    <label>Sales Team Change UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>