force-app/main/default/objects/Booking__c/fields/SBF_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>SBF_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SBF Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BookingHrUF</relationshipName>
    <type>Lookup</type>
</CustomField>