force-app/main/default/objects/Booking__c/fields/SBTR_Declared__c.field-meta.xml
<CustomField>
    <fullName>SBTR_Declared__c</fullName>
    <description>This field is used for SBTR in case of manual Booking</description>
    <label>SBTR-Declared</label>
    <type>Date</type>
</CustomField>