force-app/main/default/objects/Booking__c/fields/Secondary_Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Sales Head</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Booking (Secondary Sales Head)</relationshipLabel>
    <relationshipName>Booking8</relationshipName>
    <type>Lookup</type>
</CustomField>