force-app/main/default/objects/Booking__c/fields/Secondary_Sales_Head_VP2__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Head_VP2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Sales Head VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookinghf7M</relationshipName>
    <type>Lookup</type>
</CustomField>