force-app/main/default/objects/Booking__c/fields/Secondary_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Booking (Secondary Sales Manager)</relationshipLabel>
    <relationshipName>Booking9</relationshipName>
    <type>Lookup</type>
</CustomField>