force-app/main/default/objects/Booking__c/fields/Secondary_Sales_Manager_VP__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Manager_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Head VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BookingQs2Z</relationshipName>
    <type>Lookup</type>
</CustomField>