force-app/main/default/objects/Booking__c/fields/Select_All_Audit__c.field-meta.xml
<CustomField>
    <fullName>Select_All_Audit__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Select All Audit</label>
    <type>Checkbox</type>
</CustomField>