force-app/main/default/objects/Booking__c/fields/Seller_Representative__c.field-meta.xml
<CustomField>
    <fullName>Seller_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BookingzKfG</relationshipName>
    <type>Lookup</type>
</CustomField>