force-app/main/default/objects/Booking__c/fields/ServiceReceipt__c.field-meta.xml
<CustomField>
    <fullName>ServiceReceipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Booking (Service Receipt)</relationshipLabel>
    <relationshipName>Booking1</relationshipName>
    <type>Lookup</type>
</CustomField>