force-app/main/default/objects/Booking__c/fields/SF_Xp_Composite_Code__c.field-meta.xml
<CustomField>
    <fullName>SF_Xp_Composite_Code__c</fullName>
    <description>This is the composite code to be sent as the customer code to xpedeon.</description>
    <label>SF Xp Composite Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>