force-app/main/default/objects/Booking__c/fields/Signed_Status__c.field-meta.xml
<CustomField>
    <fullName>Signed_Status__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>Signed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking Form Uploaded</fullName>
            </value>
            <value>
                <fullName>Resubmit to Submitter</fullName>
            </value>
            <value>
                <fullName>Resubmitted for Document Verification</fullName>
            </value>
            <value>
                <fullName>No Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>